--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "ramda": "^0.25.0",
+    "redux": "^3.7.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -32,6 +34,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/ramda": "github:types/npm-ramda#dist",
     "@types/ws": "^3.2.0",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
