--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "queueing-subject": "^0.1.1",
     "ramda": "^0.25.0",
     "redux": "^3.7.2",
     "rxjs": "^5.4.2",
+    "rxjs-websockets": "^3.0.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
