--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/lodash": "^4.14.116",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.10",
     "queueing-subject": "^0.1.1",
-    "ramda": "^0.25.0",
     "redux": "^3.7.2",
     "rxjs": "^5.4.2",
     "rxjs-websockets": "^3.0.1",
@@ -36,7 +37,6 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "@types/ramda": "github:types/npm-ramda#dist",
     "@types/ws": "^3.2.0",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
